# recipe-book

./: Cargo.toml  index.html
public/: index.css
public/recipes/: boscaiola.txt  egg_fried_rice.txt
src/: main.rs  measurements.rs  recipe.rs  recipe_util.rs
styles/: main.module.css  recipe.module.css
