[package]
name = "recipe-book"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
gloo-net = { version = "0.5.0", default-features = false }
include_dir = "0.7.3"
leptos = { version = "0.6.11", features = ["csr", "nightly"] }
leptos-use = "0.10.10"
leptos_meta = { version = "0.6.11", features = ["csr", "nightly"] }
leptos_query = { version = "0.5.3", features = ["csr"] }
leptos_router = { version = "0.6.11", features = ["csr", "nightly"] }
once_cell = "1.19.0"
serde = { version = "1.0.202", features = ["derive"] }
stylance = { version = "0.4.0", features = ["nightly"] }
thiserror = "1.0.61"

[package.metadata.stylance]
output_file = "public/index.css"
folders = ["./styles/"]
extensions = [".module.scss", ".module.css"]
hash_len = 7
